--- a/.github/workflows/auto-market-analysis.yml
+++ b/.github/workflows/auto-market-analysis.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Commit and push if changes
         run: |
           git config --global user.name 'C-L-STARK'
-          git config --global user.email 'x.stark.dylan@gmail.com'
+          git config --global user.email '1621836644@qq.com'
 
           # Check if there are changes
           git add src/content/analysis/
